Fixed collaped div alignment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -572,9 +572,10 @@
    display: flex;
    justify-content: center;
    align-items: center;
-   padding-left: 5%;
+   padding: 0 5% 0 5%;
    margin: 5%;
    transition: max-height 1.5s ease-in;
+   text-align: center;
  }
 
  .collapsed-desc {
